--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <div class="container">
             <div class="row g-4 align-items-center">
                 <div class="col-lg-6 animate-stagger" style="--order: 1;">
-                    <img src="https://instasize.com/p/b3e339241d4f2a9b729a22c9b8ca315e7b00f4c1402925f86b05396e779821e0" alt="Mariyam Siddiqui" class="about-img" loading="lazy">
+                    <img src="https://i.ibb.co/6JpR2nQB/mariyam-mam-npicc.jpg" alt="Mariyam Siddiqui" class="about-img" loading="lazy">
                 </div>
                 <div class="col-lg-6 animate-stagger about-content" style="--order: 2;">
                     <div class="badge-custom mb-2">💫 Your Coach</div>
